Switched to JWT auth
