# backend/user/models.py
@@ -8,3 +8,11 @@ class UserSerializer(serializers.ModelSerializer):
     class Meta:
         model = User
         fields = ['id', 'username', 'email']
+
+class GoogleViewSerializer(serializers.Serializer):
+    token = serializers.CharField(max_length=500)
+
+class UserTokenSerializer(serializers.Serializer):
+    username = serializers.CharField(max_length=255)
+    access_token = serializers.CharField(max_length=255)
+    refresh_token = serializers.CharField(max_length=255)
